--- a/css/styles.css
+++ b/css/styles.css
@@ -5,12 +5,84 @@ body {
     background-color: #FFF;
 }
 
+p,
+h1,
+h2,
+h3 {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+a {
+    text-decoration: none;
+    color: currentColor;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+img {
+    display: block;
+    min-width: 100%;
+    height: auto;
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
+.container {
+    max-width: 100%;
+    max-width: 1158px;
+    padding: 0 15px 0 15px;
+    margin: 0 auto;
+
+}
+
 .link {
     text-decoration: none;
 }
 
 .list {
     list-style: none;
+}
+
+.header {
+    border-bottom: 1px solid #e7e9fc;
+}
+
+.header-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    
+}
+
+.navigation {
+    display: flex;
+    flex-grow: 1;
+    align-items: center;
+    
+}
+
+.heder-list {
+    gap: 40px;
+    align-items: center;
+    display: flex;
+    padding: 24px 0 24px 0;
 }
 
 .logo {
@@ -21,6 +93,10 @@ body {
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    margin-right: 76px;
+    padding: 25.5px 0 25.5px 0;
+    
+    
 }
 
 .logo-part {
@@ -32,6 +108,10 @@ body {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    display: inline-block;
+
 }
 
 .nav-link:hover,
@@ -41,11 +121,19 @@ body {
 
 .heder-address {
     font-style: normal;
+    margin-left: auto;
+    padding: 24px 0 24px 0;
+
 }
 
-.heder-adresss-list {}
+.heder-adresss-list {
+    display: flex;
+    gap: 40px;
+}
 
-.heder-address-item {}
+.heder-address-item {
+
+}
 
 
 .heder-address-link {
@@ -61,6 +149,10 @@ body {
 
 .hero {
     background-color: #2E2F42;
+    flex-shrink: 0;
+    padding: 188px 0;
+    margin: auto;
+    text-align: center;
 }
 
 .hero-title {
@@ -70,6 +162,8 @@ body {
     line-height: 1.07;
     letter-spacing: 0.02em;
     text-align: center;
+    max-width: 496px;
+    margin: 0 auto;
 }
 
 .hero-btn {
@@ -78,7 +172,20 @@ body {
     line-height: 1.5;
     letter-spacing: 0.04em;
     background-color: #4D5AE5;
-    cursor: pointer
+    cursor: pointer;
+    padding: 16px 32px;
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    box-sizing: border-box;
+    min-width: 169px;
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 48px;
+    display: block;
+    height: 56px;
+    border: none;
+
 }
 
 .hero-btn:hover,
@@ -87,12 +194,30 @@ body {
     background-color:#404BBF;
 }
 
+.princeples {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
+.princeples-container {
+}
+
+.princeples-list {
+    display: flex;
+    gap: 24px;
+}
+
+.princeples-text {
+    flex-basis: calc((100% - 72px)/4);
+}
+
 .feature {
     color:#2E2F42;
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
 }
 
 .feature-text {
@@ -104,6 +229,7 @@ body {
 
 .team-section {
     background-color: #F4F4FD;
+    padding: 120px 0;
 }
 
 .team-title {
@@ -114,10 +240,28 @@ body {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     text-align: center;
+    display: block;
+    margin-bottom: 72px;
+}
+
+.team-list {
+    display: flex;
+    gap: 24px;
 }
 
 .team-item {
     background-color: #FFFFFF;
+    width: calc((100% - 72px)/4);
+    border-radius: 0px 0px 4px 4px;
+    display: inline-flex;
+    /* padding-bottom: 32px; */
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.workers {
+    padding: 32px 0 32px 0;
 }
 
 .name {
@@ -126,11 +270,27 @@ body {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    text-align: center;
+    margin-bottom: 8px;
 }
 
 .position {
     line-height: 1.5;
     letter-spacing: 0.02em;
+    text-align: center;
+}
+
+.footer-color {
+    background: #2E2F42;
+    padding: 100px 0;
+    flex-shrink: 0;
+    margin: 0 auto;
+}
+
+.footer-container {
+    flex-direction: column;
+    justify-content: center;
+
 }
 
 .footer-logo {
@@ -141,10 +301,8 @@ body {
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-}
-
-.footer-color {
-    background: #2E2F42;
+    display: inline-block;
+    margin-bottom: 17.5px;
 }
 
 .footer-logo-part {
@@ -154,16 +312,24 @@ body {
     font-weight: 700;
     line-height: 1.17;
     letter-spacing: 0.03em;
+    display: inline-block;
 }
 
 .footer-text {
     color:#F4F4FD;
     line-height: 1.5;
-    letter-spacing: 0.02em;   
+    letter-spacing: 0.02em;
+    max-width: 264px;
 }
 
 .portfolio {
     background: #FFF;
+    padding: 120px 0 120px 0;
+}
+
+.portfolio-container {
+    display: block;
+
 }
 
 .portfolio-title {
@@ -174,6 +340,25 @@ body {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     text-align: center;
+    margin-bottom: 72px;
+}
+
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    column-gap: 24px;
+    row-gap: 48px;
+}
+
+.portfolio-item-list {
+    width: calc((100% - 48px)/3);
+}
+
+.portfolio-item-box {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
 }
 
 .portfolio-item {
@@ -183,6 +368,7 @@ body {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
 }
 .portfolio-text {
     font-size: 16px;
